<resources>
    <string name="app_name">Celulares</string>
    <string name="celulares">Celulares</string>
    <string name="registrar">Registrar</string>
    <string name="listar">Listar</string>
    <string name="reportes">Reportes</string>
    <string name="salir">Salir</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="ram">RAM</string>
    <string name="android">Android</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="regresar">Regresar</string>
    <string name="precio">Precio</string>
    <string-array name="listaPrincipal">
        <item>@string/registrar</item>
        <item>@string/listar</item>
        <item>@string/reportes</item>
        <item>@string/salir</item>
    </string-array>
    <string name="exitoGuardar">Celular guardado correctamente</string>
    <string name="seleccionarReporte">Seleccione un reporte</string>
    <string name="mostrar">Mostrar Reporte</string>
    <string name="seleccione">Seleccione...</string>
    <string name="reporUno">Reporte 1</string>
    <string name="reporDos">Reporte 2</string>
    <string name="reporTres">Reporte 3</string>
    <string name="reporCuatro">Reporte 4</string>
    <string name="reporCinco">Reporte 5</string>
    <string-array name="arrayReport">
        <item>@string/seleccione</item>
        <item>@string/reporUno</item>
        <item>@string/reporDos</item>
        <item>@string/reporTres</item>
        <item>@string/reporCuatro</item>
        <item>@string/reporCinco</item>
    </string-array>
    <string name="reporCuatroMensaje">Cantidad de celulares Apple negros: </string>
    <string name="ok">Ok</string>
    <string name="so">S.O.</string>
    <string name="errorArrayVacio">Error</string>
    <string name="errorArrayVacio2">No hay datos que mostrar.</string>
    <string name="errorMarca">Ingrese un valor en el campo Marca</string>
    <string name="errorModelo">Ingrese un valor en el campo Modelo</string>
    <string name="errorAndroid">Ingrese un valor en el campo Android</string>
    <string name="errorPrecio">Ingrese un valor en el campo Precio</string>
    <string name="errorColor">Ingrese un valor en el campo Color</string>
    <string name="errorRAM">Ingrese un valor en el campo RAM</string>
</resources>
